# advent-of-code-2023

./: .ocamlformat  README.md  aoc23.opam  dune-project
lib/: Day_08.ml  day_01.ml  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_09.ml  day_10.ml  day_11.ml  day_12.ml  day_13.ml  day_14.ml  day_15.ml  day_16.ml  day_17.ml  day_17_smt.ml  day_18.ml  day_19.ml  days.ml  dune  utils.ml
resources/: day17.smt2  day5.txt
