(library
 (name days)
 (libraries containers str containers-data)
 (inline_tests
  (deps
   (glob_files ./resources/*)))
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_hash
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord)))

(rule
 (target
  (dir resources))
 (deps
  (glob_files ../resources/*))
 (action
  (system "mkdir ./resources && cp ../resources/* ./resources/")))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
